<resources>
    <string name="app_name">CharitAble</string>
    <string name="with_email_address">with Email Address</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_in">Log In</string>
    <string name="hi">Hi</string>
    <string name="gmail">Gmail</string>
    <string name="skip">Skip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Cases fragment</string>
    <string name="hello_events_fragement">Hello events fragement</string>
    <string name="home">Home</string>
    <string name="ngo">Organizations</string>
    <string name="search">My Account</string>
    <string name="more">More</string>

    <string name="navigation_drawer_open"> Open navigation drawer </string>
    <string name="navigation_drawer_close"> Close navigation drawer </string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="chat">Chat</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>

</resources>
