<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".activities.StartActivity">

    <ImageView
        android:id="@+id/start_background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/start_screen"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/start_newAccount_txt"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_new_account"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_withEmail_btn"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/start_withEmail_btn"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#F3672A"
        android:text="@string/with_email_address"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start_facebook_btn"
        android:layout_width="164dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#31499D"
        android:text="Facebook"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/start_withEmail_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toEndOf="@+id/start_gmail_btn"
        app:layout_constraintTop_toBottomOf="@+id/start_login_txt"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/start_login_txt"
        android:layout_width="111dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/log_in"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <TextView
        android:id="@+id/start_hi_txt"
        android:layout_width="127dp"
        android:layout_height="155dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hi"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="120sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/start_gmail_btn"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#DF3535"
        android:text="@string/gmail"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/start_withEmail_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_login_txt"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/start_skip_txt"
        android:layout_width="59dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/skip"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="357dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text='" All CharitAble Organizations in One Place "'
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/start_login_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>